# aero-work

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  index.html  issues  package.json  vite.config.ts
.agent/: AGENT.md  known-issues.md  mobile-redesign.md  product.md  structure.md  tech.md  testing-guide.md  todos.md  user-manual.md
.kiro/: steering
dev-dist/: sw.js
public/: manifest.json
reference/: claude-agent-sdk-ref.md
scripts/: android-post-init.sh  bundle-agent.sh  generate-icons.sh  rename-app.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/acp/: client.rs  mod.rs  types.rs
src-tauri/src/commands/: agent.rs  file.rs  mod.rs  session.rs  terminal.rs
src-tauri/src/core/: agent.rs  config.rs  mod.rs  model_config.rs  session_registry.rs  session_state.rs  session_state_manager.rs  state.rs  terminal.rs
src-tauri/src/server/: mod.rs  websocket.rs
src/components/chat/: AskUserQuestionCard.tsx  ChatInput.tsx  ChatView.tsx  MessageList.tsx  SessionCard.tsx  SwipeableSessionCard.tsx  TodoPanel.tsx  ToolCallCard.tsx  index.ts
src/components/common/: ConnectionSetup.tsx  InstallPrompt.tsx  LocalServerDetectedDialog.tsx  PermissionDialog.tsx  ProjectSelector.tsx  WsSetupDialog.tsx
src/components/editor/: CodeEditor.tsx  EditorPanel.tsx  EditorTabs.tsx  FileTree.tsx  FileViewer.tsx  index.ts
src/components/layout/: Header.tsx  MainLayout.tsx  MobileConversation.tsx  MobileHeader.tsx  MobileLayout.tsx  MobileNavBar.tsx  MobileProjectSelector.tsx  MobileSessionList.tsx  MobileSidebar.tsx  MobileTabBar.tsx  Sidebar.tsx  StatusBar.tsx
src/components/settings/: AgentSettings.tsx  GeneralSettings.tsx  MCPSettings.tsx  ModelSettings.tsx  PermissionSettings.tsx  PluginsSettings.tsx  SettingsDialog.tsx  SettingsPage.tsx
src/components/terminal/: TerminalPanel.tsx  XTerminal.tsx  index.ts
src/components/ui/: confirm-dialog.tsx  resizable.tsx  switch.tsx
src/hooks/: useIsDarkMode.ts  useKeyboardHeight.ts  useSessionData.ts  useSwipeBack.ts  useTheme.ts  useVisibilityRefresh.ts  useZoom.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: fileTypes.ts  utils.ts
src/services/: api.ts  fileService.ts
src/services/transport/: index.ts  tauri.ts  types.ts  websocket.ts
src/stores/: agentStore.ts  fileStore.ts  mobileNavStore.ts  sessionStore.ts  settingsStore.ts  terminalStore.ts
src/types/: acp.ts  models.ts
website/: hugo.toml
