[package]
name = "aero-code"
version = "0.1.0"
description = "AI Code Agent Application"
authors = ["Aero Code Team"]
edition = "2021"
default-run = "aero-code"

[lib]
name = "aero_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
parking_lot = "0.12"
portable-pty = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"

# WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[[bin]]
name = "aero-server"
path = "src/bin/server.rs"

[features]
default = ["websocket"]
websocket = []
